Armitage Changelog
==================

In Progress
----------
- Fixed bug with loot/download viewer breaking with a font resize.
- Default console font color is now grey. I never noticed that I had
  white text on a black background before. That's a lot of contrast.
  This is adjustable too through Armitage -> Preferences.

14 May 12
---------
- Oopserific--dynamic workspace shortcuts were not bound until you
  clicked the Workspaces menu. I fixed that.
- Improved console pool's ability to detect a dead console. If you saw
  "null" prompts in an open tab, it's because of a dead console. Fixed
- Bound Ctrl+Backspace to reset dynamic workspaces. Ctrl+0 is now back
  to what it originally did (resetting the font size to default).
- Added Ctrl+T to take a screenshot of the active tab
- Added Ctrl+W to pop the active tab into its own window
- Armitage team server is now SSL enabled. The teamserver script (you
  are using it, right?) generates a certificate for you using keytool.
  The server presents the SHA1 hash of its certificate. Armitage users
  have the opportunity to verify and trust the hash of the certificate
  presented to them or to reject it and not connect.
- Added Ctrl+Left / Ctrl+Right to quickly navigate through tabs.
- Added a check to prevent clients from connecting to msfrpcd directly
  when teaming is enabled.
- Fixed a bug that prevented command shells from opening on some sessions
- Team server client now caches certain calls to RPC server.
- Reworked the Loot/Downloads View button. Now, all highlighted files are
  displayed in one View tab. This makes searching easier. Each file is
  displayed with a colored header (to make it easier to tell when one file
  ends and the other begins). 
- Added Sync Files button to Loot/Downloads tabs when connected to a team
  server. This button will download all files associated with the highlighted
  rows and save them in the Armitage data directory.

7 May 12
--------